pom and yaml upgrade for mac osx